create about page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
 
-  <main role=“main”></main>
+  <main role=“main”>
     <h1>Stuff You Should Know Podcast</h1>
     
       <div class="about-facts-content">
@@ -75,14 +75,13 @@
           <!-- Link to existing html page within episodes directory; relevant to topic -->
           <a href="#" aria-label="Learn more about doppelgangers">Learn more</a>
         </article> 
-      
+  </main>    
 
 
   <!-- Include the tag for footer content -->
   <footer role=“contentinfo”>
     <p><small>&copy; SYSK 2023</small></p>
   </footer>
-  
 
   
 </body>
