create episode pages

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   
     <nav role=“navigation”>
       <ul>
-        <li><a href="#about.html">About</a></li>
-        <li><a href="#episodes">Episodes</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="episodes.html">Episodes</a></li>
       </ul>
     </nav>
   </header>
@@ -38,7 +38,7 @@
           <li style="text-indent: 20px;">Josh and Chuck receive over 350 pieces of fan mail a week.</li>
         </ul>
           <!-- Link to about.html -->
-        <a href="#" aria-label="Learn more about the show and its hosts">Read more about the show and hosts</a>
+        <a href="about.html">Read more about the show and hosts</a>
       </div>
 
       <div class="featured-episodes">
