fix website links

--- a/episodes/everyday-phrases.html
+++ b/episodes/everyday-phrases.html
@@ -50,7 +50,7 @@
           
         <!-- Link to existing html page within episodes directory; relevant to topic -->
         <a href="fake-towns.html">Learn more</a>
-
+      </article>
       <!-- Include a tag for independent, self-contained content content -->
       <article>  
         <!-- Section sub-heading -->
