--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav role=“navigation”>
       <ul>
         <li><a href="about.html">About</a></li>
-        <li><a href="episodes.html">Episodes</a></li>
+        <li><a href="episodes/episodes.html">Episodes</a></li>
       </ul>
     </nav>
   </header>
@@ -52,7 +52,7 @@
           <img src="images/everyday-phrases.jpeg" alt="everyday phrases"/>
           <p>We don’t think about the words and phrases we use all the time - until Josh and Chuck look into them and tell everyone what they found. That’s the gist of this episode!</p>
           <!-- Link to existing html page within episodes directory; relevant to topic -->
-          <a href="#" aria-label="Learn more about interesting everyday phrases">Learn more</a>
+          <a href="episodes/everyday-phrases.html" aria-label="Learn more about interesting everyday phrases">Learn more</a>
         </article>
       </div>
 
@@ -63,7 +63,7 @@
           <img src="images/fake-towns.jpeg" alt="woman in a fake town"/>
           <p>There have been a lot of fake towns built throughout history for a lot of different reasons, like this idyllic suburb Boeing built in the 40s to hide production of their B-17 Bombers! Learn all about these bogus burbs.</p>        
           <!-- Link to existing html page within episodes directory; relevant to topic -->
-          <a href="#" aria-label="Learn more about the hostory of fake towns">Learn more</a>
+          <a href="episodes/fake-towns.html" aria-label="Learn more about the hostory of fake towns">Learn more</a>
         </article>
 
         <article>
@@ -73,7 +73,7 @@
           <img src="images/doppelgangers.jpeg" alt="two similar male silhouettes facing each other"/>
           <p>Seeing your near twin is probably pretty weird. But could there be a genetic commonality as well? You bet there could!</p>
           <!-- Link to existing html page within episodes directory; relevant to topic -->
-          <a href="#" aria-label="Learn more about doppelgangers">Learn more</a>
+          <a href="episodes/doppelgangers.html" aria-label="Learn more about doppelgangers">Learn more</a>
         </article> 
   </main>    
 
