--- a/episodes/doppelgangers.html
+++ b/episodes/doppelgangers.html
@@ -12,7 +12,7 @@
       <!-- Display sysk logo nested in an anchor tag to link to index.html -->
     <nav role=“navigation”>
       <ul>
-        <li><a href="about.html">About</a></li>
+        <li><a href="../about.html">About</a></li>
         <li><a href="episodes.html">Episodes</a></li>
       </ul>
     </nav>
