--- a/episodes/fake-towns.html
+++ b/episodes/fake-towns.html
@@ -14,7 +14,7 @@
     <!-- Write the markup for a navigation and link items to appropriate pages -->
     <nav role=“navigation”>
       <ul>
-        <li><a href="about.html">About</a></li>
+        <li><a href="../about.html">About</a></li>
         <li><a href="episodes.html">Episodes</a></li>
       </ul>
     </nav>
